rgw/amqp/kafka: prevent cuncurrent shutdowns from happening

this may be causing radosgw-admin and possibly radosgw to hang during
shutdown

fixes: https://tracker.ceph.com/issues/48293

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit b6424fa85fd61101f9becd9fb945b73d55019f82)

Conflicts: src/rgw/rgw_admin.cc
       exclude this hunk from the backport because octopus still
       needs it for the commands that were removed in
       4c486c32c6dc21d8650d8ec2e446950d82631be5. In addition this hunk
       is a cleanup unrelated to the backport.